book and media report content update Sat 12/09/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -9,46 +9,57 @@
 <div class="title">General</div>
 <div class="content">
     <img src="img/yoda_high_school.jpg" width="300" >
+    <img src="img/yoda_high_school2.jpeg" width="300" >
     <img src="img/yhs1.jpg" width="300" >
     <img src="img/yhs2.jpg" width="300" >
     <img src="img/vadervp1.jpg" width="300" >
     <img src="img/vadervp2.jpg" width="300" >
     <img src="img/chewyvp1.jpg" width="300" >
     <img src="img/chewysoup.jpg" width="300" >
+    <img src="img/jabba1.jpeg" width="300" >
     <img src="img/dinoburger.jpg" width="300" >
     <img src="img/tricerapants_burger.jpg" width="300" >
     <img src="img/tricerapants1.jpg" width="300" >
     <img src="img/optimus_egypt.jpg" width="300" >
-    <img src="img/jedi.jpg" width="300" >
+    <img src="img/jedi_sp1.jpg" width="300" >
+    <img src="img/jedi_sp2.jpeg" width="300" >
 </div>
 <div class="title">Among Us</div>
 <div class="content">
-    <img src="img/amongus4.jpg" width="300" >
-    <img src="img/amongus5.jpg" width="300" >
-    <img src="img/amongus7.jpg" width="300" >
-    <img src="img/amongus1.jpg" width="300" >
-    <img src="img/amongus2.jpeg" width="300" >
-    <img src="img/amongus3.jpeg" width="300" >
-    <img src="img/amongus6.jpg" width="300" >
+    <img src="amongus/amongus4.jpg" width="300" >
+    <img src="amongus/amongus5.jpg" width="300" >
+    <img src="amongus/amongus7.jpg" width="300" >
+    <img src="amongus/amongus1.jpg" width="300" >
+    <img src="amongus/amongus2.jpeg" width="300" >
+    <img src="amongus/amongus3.jpeg" width="300" >
+    <img src="amongus/amongus6.jpg" width="300" >
+    <img src="amongus/amongus8.jpeg" width="300" >
+    <img src="amongus/amongus9.jpeg" width="300" >
+    <img src="amongus/amongus10.jpeg" width="300" >
+    <img src="amongus/amongus11.jpg" width="300" >
 </div>
 <div class="title">Venomous Primate</div>
 <div class="content">
-    <img src="img/SirPoisonous.jpg" width="300" >
-    <img src="img/VenomousPrimate_Rajang_Icon.png" width="300" >
-    <img src="img/monk1.png" width="300" >
-    <img src="img/monk2.jpg" width="300" >
-    <img src="img/monk3.jpg" width="300" >
-    <img src="img/monk4.jpg" width="300" >
-    <img src="img/monk5.jpg" width="300" >
-    <img src="img/monk6.jpg" width="300" >
-    <img src="img/vp1.png" width="300" >
-    <img src="img/vp2.png" width="300" >
-    <img src="img/vp3.png" width="300" >
-    <img src="img/SlowLorisGreen.png" width="300" >
-    <img src="img/venomousprimate.jpg" width="300" >
-    <img src="img/pmr1.jpg" width="300" >
-    <img src="img/pmr2.jpg" width="300" >
-    <img src="img/pmr3.jpg" width="300" >
+    <img src="venomous/SirPoisonous.jpg" width="300" >
+    <img src="venomous/monk1.png" width="300" >
+    <img src="venomous/monk2.jpg" width="300" >
+    <img src="venomous/monk4.jpg" width="300" >
+    <img src="venomous/monk5.jpg" width="300" >
+    <img src="venomous/monk6.jpg" width="300" >
+    <img src="venomous/monk3.jpg" width="300" >
+    <img src="venomous/vp1.png" width="300" >
+    <img src="venomous/vp2.png" width="300" >
+    <img src="venomous/vp3.png" width="300" >
+    <img src="venomous/SlowLorisGreen.png" width="300" >
+    <img src="venomous/venomousprimate.jpg" width="300" >
+    <img src="venomous/pmr1.jpg" width="300" >
+    <img src="venomous/pmr2.jpg" width="300" >
+    <img src="venomous/pmr3.jpg" width="300" >
+    <img src="venomous/rajang1.png" width="300" >
+    <img src="venomous/rajang2.jpeg" width="300" >
+    <img src="venomous/rajang3.jpg" width="300" >
+    <img src="venomous/rajang4.jpg" width="300" >
+    <img src="venomous/rajang5.jpg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
