book and media report content update Sat 12/09/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -8,21 +8,26 @@
 <body>
 <div class="title">General</div>
 <div class="content">
-    <img src="img/yoda_high_school.jpg" width="300" >
+    <img src="img/jedi_sp1.jpg" width="300" >
+    <img src="img/jedi_sp2.jpeg" width="300" >
+    <img src="img/jedi_sp3.jpeg" width="300" >
+    <img src="img/yoda_high_school1.jpg" width="300" >
     <img src="img/yoda_high_school2.jpeg" width="300" >
+    <img src="img/yoda_high_school3.jpeg" width="300" >
     <img src="img/yhs1.jpg" width="300" >
     <img src="img/yhs2.jpg" width="300" >
+    <img src="img/jabba1.jpeg" width="300" >
     <img src="img/vadervp1.jpg" width="300" >
     <img src="img/vadervp2.jpg" width="300" >
+    <img src="img/vader_dayoff1.jpg" width="300" >
     <img src="img/chewyvp1.jpg" width="300" >
     <img src="img/chewysoup.jpg" width="300" >
-    <img src="img/jabba1.jpeg" width="300" >
+    <img src="img/chewybook.jpg" width="300" >
     <img src="img/dinoburger.jpg" width="300" >
     <img src="img/tricerapants_burger.jpg" width="300" >
     <img src="img/tricerapants1.jpg" width="300" >
     <img src="img/optimus_egypt.jpg" width="300" >
-    <img src="img/jedi_sp1.jpg" width="300" >
-    <img src="img/jedi_sp2.jpeg" width="300" >
+
 </div>
 <div class="title">Among Us</div>
 <div class="content">
@@ -45,12 +50,13 @@
     <img src="venomous/monk2.jpg" width="300" >
     <img src="venomous/monk4.jpg" width="300" >
     <img src="venomous/monk5.jpg" width="300" >
-    <img src="venomous/monk6.jpg" width="300" >
     <img src="venomous/monk3.jpg" width="300" >
     <img src="venomous/vp1.png" width="300" >
     <img src="venomous/vp2.png" width="300" >
     <img src="venomous/vp3.png" width="300" >
-    <img src="venomous/SlowLorisGreen.png" width="300" >
+    <img src="venomous/slowloris1.jpg" width="300" >
+    <img src="venomous/slowloris2.jpg" width="300" >
+    <img src="venomous/slowloris3.jpg" width="300" >
     <img src="venomous/venomousprimate.jpg" width="300" >
     <img src="venomous/pmr1.jpg" width="300" >
     <img src="venomous/pmr2.jpg" width="300" >
