--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>VemomousPrimate</title>
 </head>
 <body>
-<div class="content"><img src="vp.png"></div>
+<div class="content"><img src="avatar/venomous/slowloris1.jpg"></div>
 </body>
 </html>
