book and media report content update Fri 12/15/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -27,6 +27,8 @@
     <img src="img/tricerapants_burger.jpg" width="300" >
     <img src="img/tricerapants1.jpg" width="300" >
     <img src="img/optimus_egypt.jpg" width="300" >
+    <img src="img/MEATFACE1.png" width="300" >
+    <img src="img/MEATFACE2.png" width="300" >
 
 </div>
 <div class="title">Among Us</div>
