Push updated version of avatars

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -8,42 +8,57 @@
 <body>
 <div class="title">General</div>
 <div class="content">
-    <img src="img/jedi_sp1.jpg" width="300" >
-    <img src="img/jedi_sp2.jpeg" width="300" >
-    <img src="img/jedi_sp3.jpeg" width="300" >
-    <img src="img/yoda_high_school1.jpg" width="300" >
-    <img src="img/yoda_high_school2.jpeg" width="300" >
-    <img src="img/yoda_high_school3.jpeg" width="300" >
-    <img src="img/yhs1.jpg" width="300" >
-    <img src="img/yhs2.jpg" width="300" >
-    <img src="img/jabba1.jpeg" width="300" >
-    <img src="img/vadervp1.jpg" width="300" >
-    <img src="img/vadervp2.jpg" width="300" >
-    <img src="img/vader_dayoff1.jpg" width="300" >
-    <img src="img/chewyvp1.jpg" width="300" >
-    <img src="img/chewysoup.jpg" width="300" >
-    <img src="img/chewybook.jpg" width="300" >
-    <img src="img/dinoburger.jpg" width="300" >
-    <img src="img/tricerapants_burger.jpg" width="300" >
+    <img src="img/dino_portrait1.jpg" width="300" >
+    <img src="img/dino_portrait2.jpg" width="300" >
     <img src="img/tricerapants1.jpg" width="300" >
-    <img src="img/optimus_egypt.jpg" width="300" >
-    <img src="img/MEATFACE1.png" width="300" >
-    <img src="img/MEATFACE2.png" width="300" >
 
+    <img src="img/evil_ham1.jpeg" width="300" >
+    <img src="img/MEATFACE2.png" width="300" >
+    <img src="img/MEATFACE3.png" width="300" >
+
+    <img src="img/optimus_egypt.jpg" width="300" >
+</div>
+<div class="title">Star Wars</div>
+<div class="content">
+    <img src="starwars/jedi_sp1.jpg" width="300" >
+    <img src="starwars/jedi_sp2.jpeg" width="300" >
+    <img src="starwars/jedi_sp3.jpeg" width="300" >
+
+    <img src="starwars/yoda_high_school1.jpg" width="300" >
+    <img src="starwars/yoda_high_school2.jpeg" width="300" >
+    <img src="starwars/yoda_high_school3.jpeg" width="300" >
+
+    <img src="starwars/yhs1.jpg" width="300" >
+    <img src="starwars/yhs2.jpg" width="300" >
+    <img src="starwars/baby_yoda_does_a_business.jpeg" width="300" >
+
+    <img src="starwars/vadervp1.jpg" width="300" >
+    <img src="starwars/vadervp2.jpg" width="300" >
+    <img src="starwars/vader_dayoff1.jpg" width="300" >
+
+    <img src="starwars/chewyvp1.jpg" width="300" >
+    <img src="starwars/chewysoup.jpg" width="300" >
+    <img src="starwars/chewybook.jpg" width="300" >
+
+    <img src="starwars/jabba1.jpeg" width="300" >
 </div>
 <div class="title">Among Us</div>
 <div class="content">
     <img src="amongus/amongus4.jpg" width="300" >
-    <img src="amongus/amongus5.jpg" width="300" >
     <img src="amongus/amongus7.jpg" width="300" >
-    <img src="amongus/amongus1.jpg" width="300" >
-    <img src="amongus/amongus2.jpeg" width="300" >
     <img src="amongus/amongus3.jpeg" width="300" >
+
+    <img src="amongus/amongus1.jpg" width="300" >
+    <img src="amongus/amongus12.jpg" width="300" >
     <img src="amongus/amongus6.jpg" width="300" >
+
+    <img src="amongus/amongus2.jpeg" width="300" >
     <img src="amongus/amongus8.jpeg" width="300" >
     <img src="amongus/amongus9.jpeg" width="300" >
+
     <img src="amongus/amongus10.jpeg" width="300" >
     <img src="amongus/amongus11.jpg" width="300" >
+    <img src="amongus/amongus5.jpg" width="300" >
 </div>
 <div class="title">Venomous Primate</div>
 <div class="content">
@@ -72,23 +87,17 @@
 <div class="title">Gemini Engine</div>
 <div class="content">
     <img src="gemini/engine1.jpg" width="300" >
-    <img src="gemini/engine2.jpg" width="300" >
     <img src="gemini/engine3.jpg" width="300" >
     <img src="gemini/engine4.jpg" width="300" >
-    <img src="gemini/engine5.jpg" width="300" >
     <img src="gemini/engine6.jpg" width="300" >
-    <img src="gemini/engine7.jpg" width="300" >
     <img src="gemini/engine8.jpg" width="300" >
     <img src="gemini/arc1.jpg" width="300" >
-    <img src="gemini/davincicircuit1.jpg" width="300" >
     <img src="gemini/hotrod1.jpg" width="300" >
     <img src="gemini/hotrod2.jpg" width="300" >
     <img src="gemini/hotrod3.jpg" width="300" >
     <img src="gemini/madmax1.jpg" width="300" >
     <img src="gemini/doctor1.jpg" width="300" >
     <img src="gemini/doctor2.jpg" width="300" >
-    <img src="gemini/doctor3.jpg" width="300" >
-    <img src="gemini/doctor4.jpg" width="300" >
     <img src="gemini/robo-bob1.jpg" width="300" >
     <img src="gemini/robo-bob2.jpg" width="300" >
     <img src="gemini/robo-bob3.jpg" width="300" >
