book and media report content update Sat 12/16/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -44,21 +44,21 @@
 </div>
 <div class="title">Among Us</div>
 <div class="content">
-    <img src="amongus/amongus4.jpg" width="300" >
-    <img src="amongus/amongus7.jpg" width="300" >
-    <img src="amongus/amongus3.jpeg" width="300" >
+    <img src="amongus/amongus-wt2.jpg" width="300" >
+    <img src="amongus/amongus-wt1.jpg" width="300" >
+    <img src="amongus/amongus-wt3.jpeg" width="300" >
 
-    <img src="amongus/amongus1.jpg" width="300" >
-    <img src="amongus/amongus12.jpg" width="300" >
-    <img src="amongus/amongus6.jpg" width="300" >
+    <img src="amongus/amongus-rd2.jpg" width="300" >
+    <img src="amongus/amongus-rd1.jpg" width="300" >
+    <img src="amongus/amongus-y1.jpg" width="300" >
 
-    <img src="amongus/amongus2.jpeg" width="300" >
-    <img src="amongus/amongus8.jpeg" width="300" >
-    <img src="amongus/amongus9.jpeg" width="300" >
+    <img src="amongus/amongus-dkgr6.jpeg" width="300" >
+    <img src="amongus/amongus-dkgr1.jpeg" width="300" >
+    <img src="amongus/amongus-dkgr2.jpeg" width="300" >
 
-    <img src="amongus/amongus10.jpeg" width="300" >
-    <img src="amongus/amongus11.jpg" width="300" >
-    <img src="amongus/amongus5.jpg" width="300" >
+    <img src="amongus/amongus-dkgr4.jpeg" width="300" >
+    <img src="amongus/amongus-dkgr3.jpg" width="300" >
+    <img src="amongus/amongus-dkgr5.jpg" width="300" >
 </div>
 <div class="title">Venomous Primate</div>
 <div class="content">
@@ -98,10 +98,13 @@
     <img src="gemini/madmax1.jpg" width="300" >
     <img src="gemini/doctor1.jpg" width="300" >
     <img src="gemini/doctor2.jpg" width="300" >
-    <img src="gemini/robo-bob1.jpg" width="300" >
-    <img src="gemini/robo-bob2.jpg" width="300" >
     <img src="gemini/robo-bob3.jpg" width="300" >
     <img src="gemini/robo-bob4.jpg" width="300" >
+    <img src="gemini/robo-bob5.jpg" width="300" >
+    <img src="gemini/robo-bob6.jpg" width="300" >
+    <img src="gemini/robo-bob7.jpg" width="300" >
+    <img src="gemini/robo-bob8.jpg" width="300" >
+    <img src="gemini/robo-bob9.jpg" width="300" >
 </div>
 </body>
 </html>
