book and media report content update Sat 12/23/2023

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -100,5 +100,11 @@
     </div>
 </div>
 
+<br><br>
+
+<div id="container7">
+    <img src="img/reading_pace.png" width="900" >
+</div>
+
 </body>
 </html>
