--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -3,10 +3,20 @@
 <head>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Book Report</title>
+    <title>Network Backup Report</title>
 </head>
 <body>
-
+<div class="content">
+<div class="title">AHSOKA</div>
+No log files found in the backup directory for this device.
+<div class="title">ARTOO</div>
+Last backup date: 01/02/2024 07:01 AM<br>
+<div class="title">JYN</div>
+Last backup date: 11/28/2022 11:32 PM<br>
+<div class="title">SIDIOUS</div>
+Last backup date: 01/02/2024 06:01 AM<br>
+<div class="title">YODA</div>
+Last backup date: 01/02/2024 06:07 AM<br>
 </div>
 </body>
 </html>
