--- a/games/index.html
+++ b/games/index.html
@@ -30,10 +30,6 @@
 <body>
 
 <div id="container1">
-    <div class="button" id="button-1">
-        <div id="slide1"></div>
-        <a href="https://worldle.teuteuf.fr/">🌍WORLDLE🌍</a>
-    </div>
     <div class="button" id="button-2">
         <div id="slide2"></div>
         <a href="https://www.nytimes.com/games/connections">CONNECTIONS</a>
@@ -44,6 +40,10 @@
     <div class="button" id="button-3">
         <div id="slide3"></div>
         <a href="https://www.nytimes.com/games/wordle/index.html">WORDLE</a>
+    </div>
+    <div class="button" id="button-4">
+        <div id="slide4"></div>
+        <a href="https://wordle.at/">WORDLE DEUTSCH</a>
     </div>
 </div>
 
@@ -70,6 +70,17 @@
 </div>
 
 <div id="container5">
+    <div class="button" id="button-9">
+        <div id="slide9"></div>
+        <a href="https://worldle.teuteuf.fr/">🌍WORLDLE🌍</a>
+    </div>
+</div>
+
+<div id="container6">
+    <div class="button" id="button-10">
+        <div id="slide10"></div>
+        <a href="life">Life</a>
+    </div>
 </div>
 
 </body>
