--- a/landing.html
+++ b/landing.html
@@ -78,21 +78,28 @@
 <div id="container5">
     <div class="button" id="button-9">
         <div id="slide9"></div>
-        <a href="https://bcps.nutrislice.com/menu/bcps-weekly-menus">BCPS Lunch</a>
+        <a href="report/backup">Backup Status</a>
     </div>
     <div class="button" id="button-10">
         <div id="slide10"></div>
-        <a href="altitude">Altitude</a>
+        <a href="https://www.bing.com/images/create/">DALL-E 3</a>
     </div>
 </div>
 
 <div id="container6">
     <div class="button" id="button-11">
         <div id="slide11"></div>
-        <a href="life">Life</a>
+        <a href="https://bcps.nutrislice.com/menu/bcps-weekly-menus">BCPS Lunch</a>
     </div>
     <div class="button" id="button-12">
         <div id="slide12"></div>
+        <a href="altitude">Altitude</a>
+    </div>
+</div>
+
+<div id="container7">
+    <div class="button" id="button-14">
+        <div id="slide14"></div>
         <a href="games">Games</a>
     </div>
 </div>
