Push reorganization of yearly book images

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <div id="container7">
-    <img src="img/reading_pace.png" width="900" >
+    <img src="years/img/reading_pace.png" width="900" >
 </div>
 
 <div class="title">Book Images</div>
