--- a/report/books/years/2022_book_images.html
+++ b/report/books/years/2022_book_images.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../bookimages.css">
+    <link rel="stylesheet" href="bookimages.css">
     <meta charset="UTF-8">
     <title>2022 Books</title>
 </head>
