--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,3 +7,16 @@
 </head>
 <body>
 <div class="content">
+<div class="title">AHSOKA</div>
+No log files found in the backup directory for this device.
+<div class="title">ARTOO</div>
+Last backup date: 12/31/2023 03:00 AM<br>
+<div class="title">JYN</div>
+No log files found in the backup directory for this device.
+<div class="title">SIDIOUS</div>
+No log files found in the backup directory for this device.
+<div class="title">YODA</div>
+No log files found in the backup directory for this device.
+</div>
+</body>
+</html>
