book and media report content update Sat 01/06/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -98,6 +98,9 @@
     <img src="gemini/madmax1.jpg" width="300" >
     <img src="gemini/doctor1.jpg" width="300" >
     <img src="gemini/doctor2.jpg" width="300" >
+</div>
+<div class="title">Gemini Bob</div>
+<div class="content">
     <img src="gemini/robo-bob3.jpg" width="300" >
     <img src="gemini/robo-bob4.jpg" width="300" >
     <img src="gemini/robo-bob5.jpg" width="300" >
