--- a/report/books/index.html
+++ b/report/books/index.html
@@ -28,7 +28,7 @@
     </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Book Reports</title>
 </head>
 <body>
 <div id="container7">
