book and media report content update Tue 01/09/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,3 +7,16 @@
 </head>
 <body>
 <div class="content">
+<div class="title">AHSOKA</div>
+No log files found in the backup directory for this device.
+<div class="title">ARTOO</div>
+Last backup date: 01/09/2024 09:54 AM<br>
+<div class="title">JYN</div>
+Last backup date: 11/28/2022 11:32 PM<br>
+<div class="title">SIDIOUS</div>
+Last backup date: 12/29/2023 07:56 PM<br>
+<div class="title">YODA</div>
+Last backup date: 01/09/2024 03:02 AM<br>
+</div>
+</body>
+</html>
