book and media report content update Wed 01/10/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,3 +7,8 @@
 </head>
 <body>
 <div class="content">
+<div class="title">Error Retrieving Backup Information</div>
+Unable to reach the specified backup folder location
+</div>
+</body>
+</html>
