Push new loris images

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -71,9 +71,6 @@
     <img src="venomous/vp1.png" width="300" >
     <img src="venomous/vp2.png" width="300" >
     <img src="venomous/vp3.png" width="300" >
-    <img src="venomous/slowloris1.jpg" width="300" >
-    <img src="venomous/slowloris2.jpg" width="300" >
-    <img src="venomous/slowloris3.jpg" width="300" >
     <img src="venomous/venomousprimate.jpg" width="300" >
     <img src="venomous/pmr1.jpg" width="300" >
     <img src="venomous/pmr2.jpg" width="300" >
@@ -83,6 +80,20 @@
     <img src="venomous/rajang3.jpg" width="300" >
     <img src="venomous/rajang4.jpg" width="300" >
     <img src="venomous/rajang5.jpg" width="300" >
+</div>
+<div class="title">Slow Loris</div>
+<div class="content">
+    <img src="venomous/slowloris/sl1.jpg" width="300" >
+    <img src="venomous/slowloris/sl2.jpg" width="300" >
+    <img src="venomous/slowloris/sl3.jpg" width="300" >
+    <img src="venomous/slowloris/slbattlefield.jpg" width="300" >
+    <img src="venomous/slowloris/slgentleman.jpg" width="300" >
+    <img src="venomous/slowloris/slportraitblackbg.jpeg" width="300" >
+    <img src="venomous/slowloris/slpostap.jpeg" width="300" >
+    <img src="venomous/slowloris/slspace.jpeg" width="300" >
+    <img src="venomous/slowloris/slvg.jpeg" width="300" >
+    <img src="venomous/slowloris/slwarrior.jpeg" width="300" >
+    <img src="venomous/slowloris/slwarlock.jpeg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
