book and media report content update Tue 01/16/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -91,7 +91,8 @@
     <img src="venomous/slowloris/slportraitblackbg.jpeg" width="300" >
     <img src="venomous/slowloris/slpostap.jpeg" width="300" >
     <img src="venomous/slowloris/slspace.jpeg" width="300" >
-    <img src="venomous/slowloris/slvg.jpeg" width="300" >
+    <img src="venomous/slowloris/slvg2.jpeg" width="300" >
+    <img src="venomous/slowloris/slvg3.jpeg" width="300" >
     <img src="venomous/slowloris/slwarrior.jpeg" width="300" >
     <img src="venomous/slowloris/slwarlock.jpeg" width="300" >
 </div>
