Restructure avatar images. change report text wrap.

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -18,106 +18,106 @@
 </div>
 <div class="title">Star Wars</div>
 <div class="content">
-    <img src="starwars/jedi_sp1.jpg" width="300" >
-    <img src="starwars/jedi_sp2.jpeg" width="300" >
-    <img src="starwars/jedi_sp3.jpeg" width="300" >
+    <img src="img/starwars/jedi_sp1.jpg" width="300" >
+    <img src="img/starwars/jedi_sp2.jpeg" width="300" >
+    <img src="img/starwars/jedi_sp3.jpeg" width="300" >
 
-    <img src="starwars/yoda_high_school1.jpg" width="300" >
-    <img src="starwars/yoda_high_school2.jpeg" width="300" >
-    <img src="starwars/yoda_high_school3.jpeg" width="300" >
+    <img src="img/starwars/yoda_high_school1.jpg" width="300" >
+    <img src="img/starwars/yoda_high_school2.jpeg" width="300" >
+    <img src="img/starwars/yoda_high_school3.jpeg" width="300" >
 
-    <img src="starwars/yhs1.jpg" width="300" >
-    <img src="starwars/yhs2.jpg" width="300" >
-    <img src="starwars/baby_yoda_does_a_business.jpeg" width="300" >
+    <img src="img/starwars/yhs1.jpg" width="300" >
+    <img src="img/starwars/yhs2.jpg" width="300" >
+    <img src="img/starwars/baby_yoda_does_a_business.jpeg" width="300" >
 
-    <img src="starwars/vadervp1.jpg" width="300" >
-    <img src="starwars/vadervp2.jpg" width="300" >
-    <img src="starwars/vader_dayoff1.jpg" width="300" >
+    <img src="img/starwars/vadervp1.jpg" width="300" >
+    <img src="img/starwars/vadervp2.jpg" width="300" >
+    <img src="img/starwars/vader_dayoff1.jpg" width="300" >
 
-    <img src="starwars/chewyvp1.jpg" width="300" >
-    <img src="starwars/chewysoup.jpg" width="300" >
-    <img src="starwars/chewybook.jpg" width="300" >
+    <img src="img/starwars/chewyvp1.jpg" width="300" >
+    <img src="img/starwars/chewysoup.jpg" width="300" >
+    <img src="img/starwars/chewybook.jpg" width="300" >
 
-    <img src="starwars/jabba1.jpeg" width="300" >
+    <img src="img/starwars/jabba1.jpeg" width="300" >
 </div>
 <div class="title">Among Us</div>
 <div class="content">
-    <img src="amongus/amongus-wt2.jpg" width="300" >
-    <img src="amongus/amongus-wt1.jpg" width="300" >
-    <img src="amongus/amongus-wt3.jpeg" width="300" >
+    <img src="img/amongus/amongus-wt2.jpg" width="300" >
+    <img src="img/amongus/amongus-wt1.jpg" width="300" >
+    <img src="img/amongus/amongus-wt3.jpeg" width="300" >
 
-    <img src="amongus/amongus-rd2.jpg" width="300" >
-    <img src="amongus/amongus-rd1.jpg" width="300" >
-    <img src="amongus/amongus-y1.jpg" width="300" >
+    <img src="img/amongus/amongus-rd2.jpg" width="300" >
+    <img src="img/amongus/amongus-rd1.jpg" width="300" >
+    <img src="img/amongus/amongus-y1.jpg" width="300" >
 
-    <img src="amongus/amongus-dkgr6.jpeg" width="300" >
-    <img src="amongus/amongus-dkgr1.jpeg" width="300" >
-    <img src="amongus/amongus-dkgr2.jpeg" width="300" >
+    <img src="img/amongus/amongus-dkgr6.jpeg" width="300" >
+    <img src="img/amongus/amongus-dkgr1.jpeg" width="300" >
+    <img src="img/amongus/amongus-dkgr2.jpeg" width="300" >
 
-    <img src="amongus/amongus-dkgr4.jpeg" width="300" >
-    <img src="amongus/amongus-dkgr3.jpg" width="300" >
-    <img src="amongus/amongus-dkgr5.jpg" width="300" >
+    <img src="img/amongus/amongus-dkgr4.jpeg" width="300" >
+    <img src="img/amongus/amongus-dkgr3.jpg" width="300" >
+    <img src="img/amongus/amongus-dkgr5.jpg" width="300" >
 </div>
 <div class="title">Venomous Primate</div>
 <div class="content">
-    <img src="venomous/SirPoisonous.jpg" width="300" >
-    <img src="venomous/monk1.png" width="300" >
-    <img src="venomous/monk2.jpg" width="300" >
-    <img src="venomous/monk4.jpg" width="300" >
-    <img src="venomous/monk5.jpg" width="300" >
-    <img src="venomous/monk3.jpg" width="300" >
-    <img src="venomous/vp1.png" width="300" >
-    <img src="venomous/vp2.png" width="300" >
-    <img src="venomous/vp3.png" width="300" >
-    <img src="venomous/venomousprimate.jpg" width="300" >
-    <img src="venomous/pmr1.jpg" width="300" >
-    <img src="venomous/pmr2.jpg" width="300" >
-    <img src="venomous/pmr3.jpg" width="300" >
-    <img src="venomous/rajang1.png" width="300" >
-    <img src="venomous/rajang2.jpeg" width="300" >
-    <img src="venomous/rajang3.jpg" width="300" >
-    <img src="venomous/rajang4.jpg" width="300" >
-    <img src="venomous/rajang5.jpg" width="300" >
+    <img src="img/venomous/SirPoisonous.jpg" width="300" >
+    <img src="img/venomous/monk1.png" width="300" >
+    <img src="img/venomous/monk2.jpg" width="300" >
+    <img src="img/venomous/monk4.jpg" width="300" >
+    <img src="img/venomous/monk5.jpg" width="300" >
+    <img src="img/venomous/monk3.jpg" width="300" >
+    <img src="img/venomous/vp1.png" width="300" >
+    <img src="img/venomous/vp2.png" width="300" >
+    <img src="img/venomous/vp3.png" width="300" >
+    <img src="img/venomous/venomousprimate.jpg" width="300" >
+    <img src="img/venomous/pmr1.jpg" width="300" >
+    <img src="img/venomous/pmr2.jpg" width="300" >
+    <img src="img/venomous/pmr3.jpg" width="300" >
+    <img src="img/venomous/rajang1.png" width="300" >
+    <img src="img/venomous/rajang2.jpeg" width="300" >
+    <img src="img/venomous/rajang3.jpg" width="300" >
+    <img src="img/venomous/rajang4.jpg" width="300" >
+    <img src="img/venomous/rajang5.jpg" width="300" >
 </div>
 <div class="title">Slow Loris</div>
 <div class="content">
-    <img src="venomous/slowloris/sl1.jpg" width="300" >
-    <img src="venomous/slowloris/sl2.jpg" width="300" >
-    <img src="venomous/slowloris/sl3.jpg" width="300" >
-    <img src="venomous/slowloris/slbattlefield.jpg" width="300" >
-    <img src="venomous/slowloris/slgentleman.jpg" width="300" >
-    <img src="venomous/slowloris/slportraitblackbg.jpeg" width="300" >
-    <img src="venomous/slowloris/slpostap.jpeg" width="300" >
-    <img src="venomous/slowloris/slspace.jpeg" width="300" >
-    <img src="venomous/slowloris/slvg2.jpeg" width="300" >
-    <img src="venomous/slowloris/slvg3.jpeg" width="300" >
-    <img src="venomous/slowloris/slwarrior.jpeg" width="300" >
-    <img src="venomous/slowloris/slwarlock.jpeg" width="300" >
+    <img src="img/venomous/slowloris/sl1.jpg" width="300" >
+    <img src="img/venomous/slowloris/sl2.jpg" width="300" >
+    <img src="img/venomous/slowloris/sl3.jpg" width="300" >
+    <img src="img/venomous/slowloris/slbattlefield.jpg" width="300" >
+    <img src="img/venomous/slowloris/slgentleman.jpg" width="300" >
+    <img src="img/venomous/slowloris/slportraitblackbg.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slpostap.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slspace.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slvg2.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slvg3.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slwarrior.jpeg" width="300" >
+    <img src="img/venomous/slowloris/slwarlock.jpeg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
-    <img src="gemini/engine1.jpg" width="300" >
-    <img src="gemini/engine3.jpg" width="300" >
-    <img src="gemini/engine4.jpg" width="300" >
-    <img src="gemini/engine6.jpg" width="300" >
-    <img src="gemini/engine8.jpg" width="300" >
-    <img src="gemini/arc1.jpg" width="300" >
-    <img src="gemini/hotrod1.jpg" width="300" >
-    <img src="gemini/hotrod2.jpg" width="300" >
-    <img src="gemini/hotrod3.jpg" width="300" >
-    <img src="gemini/madmax1.jpg" width="300" >
-    <img src="gemini/doctor1.jpg" width="300" >
-    <img src="gemini/doctor2.jpg" width="300" >
+    <img src="img/gemini/engine1.jpg" width="300" >
+    <img src="img/gemini/engine3.jpg" width="300" >
+    <img src="img/gemini/engine4.jpg" width="300" >
+    <img src="img/gemini/engine6.jpg" width="300" >
+    <img src="img/gemini/engine8.jpg" width="300" >
+    <img src="img/gemini/arc1.jpg" width="300" >
+    <img src="img/gemini/hotrod1.jpg" width="300" >
+    <img src="img/gemini/hotrod2.jpg" width="300" >
+    <img src="img/gemini/hotrod3.jpg" width="300" >
+    <img src="img/gemini/madmax1.jpg" width="300" >
+    <img src="img/gemini/doctor1.jpg" width="300" >
+    <img src="img/gemini/doctor2.jpg" width="300" >
 </div>
 <div class="title">Gemini Bob</div>
 <div class="content">
-    <img src="gemini/robo-bob3.jpg" width="300" >
-    <img src="gemini/robo-bob4.jpg" width="300" >
-    <img src="gemini/robo-bob5.jpg" width="300" >
-    <img src="gemini/robo-bob6.jpg" width="300" >
-    <img src="gemini/robo-bob7.jpg" width="300" >
-    <img src="gemini/robo-bob8.jpg" width="300" >
-    <img src="gemini/robo-bob9.jpg" width="300" >
+    <img src="img/gemini/robo-bob3.jpg" width="300" >
+    <img src="img/gemini/robo-bob4.jpg" width="300" >
+    <img src="img/gemini/robo-bob5.jpg" width="300" >
+    <img src="img/gemini/robo-bob6.jpg" width="300" >
+    <img src="img/gemini/robo-bob7.jpg" width="300" >
+    <img src="img/gemini/robo-bob8.jpg" width="300" >
+    <img src="img/gemini/robo-bob9.jpg" width="300" >
 </div>
 </body>
 </html>
