change report font size.

--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -12,7 +12,7 @@
 All books sorted by name - 01/18/2024 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1713 books<br>
+1713 books<br>ver21
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 101 Essays That Will Change the Way You Think - Brianna Wiest - 10H 48M (Book Reserve - Audiobooks)<br>
@@ -379,7 +379,7 @@ Diary of a Wimpy Kid 11 - Double Down - Jeff Kinney - 1H 59M (Finished\Completed
 Diary of a Wimpy Kid 12 - The Getaway - Jeff Kinney - 1H 51M (Finished\Completed - With The Kids)<br>
 Diary of a Wimpy Kid 15 - The Deep End - Jeff Kinney - 1H 43M (Finished\Completed - With The Kids)<br>
 Diary of a Wimpy Kid 16 - Big Shot - Jeff Kinney - 1H 52M (Finished\Completed - With The Kids)<br>
-Diary of a Wimpy Kid 17 - Diper Överlöde - Jeff Kinney - 1H 56M (Book Reserve - Kids Audiobooks)<br>
+Diary of a Wimpy Kid 17 - Diper ï¿½verlï¿½de - Jeff Kinney - 1H 56M (Book Reserve - Kids Audiobooks)<br>
 Diary of a Wimpy Kid 18 - No Brainer - Jeff Kinney - 1H 58M (Book Reserve - Kids Audiobooks)<br>
 Diary of an Awesome Friendly Kid 1 - Rowley Jefferson's Journal - Jeff Kinney - 1H 36M (Finished\Completed - With The Kids)<br>
 Diary of an Awesome Friendly Kid 2 - Rowley Jefferson's Awesome Friendly Adventure - Jeff Kinney - 1H 31M (Finished\Completed - With The Kids)<br>
@@ -1431,7 +1431,7 @@ The Moon is a Harsh Mistress - Robert A Heinlein - 14H 13M (Book Reserve - Audio
 The Mote in God's Eye - Larry Niven - 20H 28M (Queue - Audible Audiobooks) - AUDIBLE<br>
 The Mote in God's Eye - Niven & Pournelle - 20H 28M (Book Reserve - Audiobooks (Need new source))<br>
 The Mother Tongue - Bill Bryson - 10H 47M (Finished\Completed in 2018)<br>
-The Narcissist Next Door - Understanding the Monster in Your Family, in Your Office, in Your Bed—in Your World - Jeffrey Kluger - 9H 25M (Book Reserve - Audiobooks)<br>
+The Narcissist Next Door - Understanding the Monster in Your Family, in Your Office, in Your Bedï¿½in Your World - Jeffrey Kluger - 9H 25M (Book Reserve - Audiobooks)<br>
 The New Jim Crow - Michelle Alexander - 17H 1M (Book Reserve - Audiobooks)<br>
 The Night Circus - Erin Morgenstern - 13H 44M (Queue - Current Audiobook Queue)<br>
 The Number Ones - Twenty Chart-Topping Hits That Reveal the History of Pop Music - Tom Breihan - 11H 13M (Book Reserve - Audiobooks)<br>
