book and media report content update Fri 02/02/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -119,5 +119,11 @@
     <img src="img/gemini/robo-bob8.jpg" width="300" >
     <img src="img/gemini/robo-bob9.jpg" width="300" >
 </div>
+<div class="title">Buisiness Portrait</div>
+<div class="content">
+    <img src="img/portrait/portrait.jpg" width="300" >
+    <img src="img/portrait/portrait_square.jpg" width="300" >
+    <img src="img/portrait/portrait_square_sm.jpg" width="300" >
+</div>
 </body>
 </html>
