book and media report content update Sat 02/03/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
 <div class="content">
-<div class="title">Error Retrieving Backup Information</div>
-Unable to reach the specified backup folder location
+<div class="title">AHSOKA</div>
+No log files found in the backup directory for this device.
+<div class="title">ARTOO</div>
+Last backup date: 02/03/2024 03:00 AM<br>
+<div class="title">YODA</div>
+Last backup date: 02/03/2024 01:02 AM<br>
 </div>
 </body>
 </html>
