--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">AHSOKA</div>
-No log files found in the backup directory for this device.
+Last backup date: 02/04/2024 09:00 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 02/04/2024 03:04 AM<br>
+Last backup date: 02/05/2024 03:17 AM<br>
 <div class="title">YODA</div>
-Last backup date: 02/03/2024 06:23 AM<br>
+Last backup date: 02/04/2024 06:16 AM<br>
 </div>
 </body>
 </html>
