book and media report content update Wed 02/14/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -15,6 +15,10 @@
     <img src="img/evil_ham1.jpeg" width="300" >
     <img src="img/MEATFACE3.png" width="300" >
     <img src="img/optimus_egypt.jpg" width="300" >
+
+    <img src="img/jb1.jpeg" width="300" >
+    <img src="img/jb2.jpeg" width="300" >
+    <img src="img/jb3.jpeg" width="300" >
 </div>
 <div class="title">Star Wars</div>
 <div class="content">
