--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,12 +7,8 @@
 </head>
 <body>
 <div class="content">
-<div class="title">AHSOKA</div>
-Last backup date: 02/04/2024 09:00 PM<br>
-<div class="title">ARTOO</div>
-Last backup date: 02/28/2024 03:26 AM<br>
-<div class="title">YODA</div>
-Last backup date: 02/28/2024 11:56 AM<br>
+<div class="title">Error Retrieving Backup Information</div>
+Unable to reach the specified backup folder location
 </div>
 </body>
 </html>
