book and media report content update Sat 03/23/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -8,10 +8,6 @@
 <body>
 <div class="title">General</div>
 <div class="content">
-    <img src="img/dino_portrait1.jpg" width="300" >
-    <img src="img/dino_portrait2.jpg" width="300" >
-    <img src="img/tricerapants1.jpg" width="300" >
-
     <img src="img/evil_ham1.jpeg" width="300" >
     <img src="img/MEATFACE3.png" width="300" >
     <img src="img/optimus_egypt.jpg" width="300" >
@@ -19,6 +15,16 @@
     <img src="img/jb1.jpeg" width="300" >
     <img src="img/jb2.jpeg" width="300" >
     <img src="img/jb3.jpeg" width="300" >
+
+    <img src="img/8bitconan.jpeg" width="300" >
+    <img src="img/8bitoregon.jpeg" width="300" >
+    <img src="img/8bityoda.jpeg" width="300" >
+
+    <img src="img/dino_portrait1.jpg" width="300" >
+    <img src="img/dino_portrait2.jpg" width="300" >
+    <img src="img/tricerapants1.jpg" width="300" >
+
+    <img src="img/spacedino.jpeg" width="300" >
 </div>
 <div class="title">Star Wars</div>
 <div class="content">
@@ -67,18 +73,23 @@
     <img src="img/venomous/SirPoisonous.jpg" width="300" >
     <img src="img/venomous/monk1.png" width="300" >
     <img src="img/venomous/monk2.jpg" width="300" >
+
     <img src="img/venomous/monk4.jpg" width="300" >
     <img src="img/venomous/monk5.jpg" width="300" >
     <img src="img/venomous/monk3.jpg" width="300" >
+
     <img src="img/venomous/vp1.png" width="300" >
     <img src="img/venomous/vp2.png" width="300" >
     <img src="img/venomous/vp3.png" width="300" >
+
     <img src="img/venomous/venomousprimate.jpg" width="300" >
     <img src="img/venomous/pmr1.jpg" width="300" >
     <img src="img/venomous/pmr2.jpg" width="300" >
+
     <img src="img/venomous/pmr3.jpg" width="300" >
     <img src="img/venomous/rajang1.png" width="300" >
     <img src="img/venomous/rajang2.jpeg" width="300" >
+
     <img src="img/venomous/rajang3.jpg" width="300" >
     <img src="img/venomous/rajang4.jpg" width="300" >
     <img src="img/venomous/rajang5.jpg" width="300" >
@@ -88,27 +99,42 @@
     <img src="img/venomous/slowloris/sl1.jpg" width="300" >
     <img src="img/venomous/slowloris/sl2.jpg" width="300" >
     <img src="img/venomous/slowloris/sl3.jpg" width="300" >
+
     <img src="img/venomous/slowloris/slbattlefield.jpg" width="300" >
     <img src="img/venomous/slowloris/slgentleman.jpg" width="300" >
     <img src="img/venomous/slowloris/slportraitblackbg.jpeg" width="300" >
+
     <img src="img/venomous/slowloris/slpostap.jpeg" width="300" >
     <img src="img/venomous/slowloris/slspace.jpeg" width="300" >
     <img src="img/venomous/slowloris/slvg2.jpeg" width="300" >
+
     <img src="img/venomous/slowloris/slvg3.jpeg" width="300" >
     <img src="img/venomous/slowloris/slwarrior.jpeg" width="300" >
     <img src="img/venomous/slowloris/slwarlock.jpeg" width="300" >
+
+    <img src="img/venomous/slowloris/sljedi1.jpeg" width="300" >
+    <img src="img/venomous/slowloris/sljedi2.jpeg" width="300" >
+</div>
+<div class="title">Memes</div>
+<div class="content">
+    <img src="img/memes/buyaboat.jpeg" width="300" >
+    <img src="img/memes/kermittea1.jpeg" width="300" >
+    <img src="img/memes/success.jpeg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
     <img src="img/gemini/engine1.jpg" width="300" >
     <img src="img/gemini/engine3.jpg" width="300" >
     <img src="img/gemini/engine4.jpg" width="300" >
+
     <img src="img/gemini/engine6.jpg" width="300" >
     <img src="img/gemini/engine8.jpg" width="300" >
     <img src="img/gemini/arc1.jpg" width="300" >
+
     <img src="img/gemini/hotrod1.jpg" width="300" >
     <img src="img/gemini/hotrod2.jpg" width="300" >
     <img src="img/gemini/hotrod3.jpg" width="300" >
+
     <img src="img/gemini/madmax1.jpg" width="300" >
     <img src="img/gemini/doctor1.jpg" width="300" >
     <img src="img/gemini/doctor2.jpg" width="300" >
@@ -118,12 +144,14 @@
     <img src="img/gemini/robo-bob3.jpg" width="300" >
     <img src="img/gemini/robo-bob4.jpg" width="300" >
     <img src="img/gemini/robo-bob5.jpg" width="300" >
+
     <img src="img/gemini/robo-bob6.jpg" width="300" >
     <img src="img/gemini/robo-bob7.jpg" width="300" >
     <img src="img/gemini/robo-bob8.jpg" width="300" >
+
     <img src="img/gemini/robo-bob9.jpg" width="300" >
 </div>
-<div class="title">Buisiness Portrait</div>
+<div class="title">Business Portrait</div>
 <div class="content">
     <img src="img/portrait/portrait.jpg" width="300" >
     <img src="img/portrait/portrait_square.jpg" width="300" >
