book and media report content update Sat 03/23/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -156,6 +156,13 @@
     <img src="img/portrait/portrait.jpg" width="300" >
     <img src="img/portrait/portrait_square.jpg" width="300" >
     <img src="img/portrait/portrait_square_sm.jpg" width="300" >
+
+    <img src="img/portrait/44694_135556549820562_100000986530189_185054_481620_n.jpg" width="300" >
+    <img src="img/portrait/bw.jpg" width="300" >
+    <img src="img/portrait/dis21-5.png" width="300" >
+
+    <img src="img/portrait/grad%202019-12-14%2008.22.19.jpg" width="300" >
+    <img src="img/portrait/sshot-3.jpg" width="300" >
 </div>
 </body>
 </html>
