book and media report content update Sat 03/23/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -163,6 +163,7 @@
 
     <img src="img/portrait/grad%202019-12-14%2008.22.19.jpg" width="300" >
     <img src="img/portrait/sshot-3.jpg" width="300" >
+    <img src="img/portrait/space.jpeg" width="300" >
 </div>
 </body>
 </html>
