book and media report content update Mon 04/01/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -166,7 +166,11 @@
     <img src="img/portrait/paint1.jpg" width="300" >
 
     <img src="img/portrait/space.jpeg" width="300" >
-    <img src="img/portrait/space2.jpg" width="300" >
+    <img src="img/portrait/sketch1.png" width="300" >
+    <img src="img/portrait/sketch2.png" width="300" >
+
+    <img src="img/portrait/sketch3.png" width="300" >
+    <img src="img/portrait/sketch4.png" width="300" >
 </div>
 </body>
 </html>
