--- a/avatar/index.html
+++ b/avatar/index.html
@@ -158,17 +158,14 @@
     <img src="img/portrait/portrait_square_sm.jpg" width="300" >
 
     <img src="img/portrait/44694_135556549820562_100000986530189_185054_481620_n.jpg" width="300" >
-    <img src="img/portrait/bw.jpg" width="300" >
     <img src="img/portrait/dis21-5.png" width="300" >
+    <img src="img/portrait/grad.jpg" width="300" >
 
-    <img src="img/portrait/grad%202019-12-14%2008.22.19.jpg" width="300" >
-    <img src="img/portrait/sshot-3.jpg" width="300" >
     <img src="img/portrait/paint1.jpg" width="300" >
-
     <img src="img/portrait/space.jpeg" width="300" >
     <img src="img/portrait/sketch1.png" width="300" >
-    <img src="img/portrait/sketch2.png" width="300" >
 
+    <img src="img/portrait/sketch2.png" width="300" >
     <img src="img/portrait/sketch3.png" width="300" >
     <img src="img/portrait/sketch4.png" width="300" >
 </div>
