book and media report content update Mon 04/01/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -157,7 +157,7 @@
     <img src="img/portrait/portrait_square.jpg" width="300" >
     <img src="img/portrait/portrait_square_sm.jpg" width="300" >
 
-    <img src="img/portrait/44694_135556549820562_100000986530189_185054_481620_n.jpg" width="300" >
+    <img src="img/portrait/44694.jpg" width="300" >
     <img src="img/portrait/dis21-5.png" width="300" >
     <img src="img/portrait/grad.jpg" width="300" >
 
@@ -167,7 +167,10 @@
 
     <img src="img/portrait/sketch2.png" width="300" >
     <img src="img/portrait/sketch3.png" width="300" >
+    <img src="img/portrait/sketch3-square.png" width="300" >
+
     <img src="img/portrait/sketch4.png" width="300" >
+    <img src="img/portrait/sketch4-color.png.png" width="300" >
 </div>
 </body>
 </html>
