--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -7,12 +7,8 @@
 </head>
 <body>
 <div class="content">
-<div class="title">AHSOKA</div>
-Last backup date: 05/07/2024 05:54 PM<br>
-<div class="title">ARTOO</div>
-Last backup date: 05/10/2024 03:23 AM<br>
-<div class="title">YODA</div>
-Last backup date: 05/09/2024 06:26 AM<br>
+<div class="title">Error Retrieving Backup Information</div>
+Unable to reach the specified backup folder location
 </div>
 </body>
 </html>
